fix: replace height with min-height to make UI responsive

--- a/promptbook/templates/list_categories.html
+++ b/promptbook/templates/list_categories.html
@@ -9,7 +9,7 @@
       color: #4a4a4a;
       display: block;
       padding: 1.25rem;
-      height: 18rem;
+      min-height: 18rem;
     }
 
     .category-label {
@@ -86,7 +86,7 @@
     }
 
     .preview-section {
-      height: 5rem;
+      min-height: 5rem;
     }
   </style>
   <div class="container">
