feat: add media queries for mobile phone

--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -139,6 +139,13 @@
       .cancel-btn {
         color: #485fc7;
       }
+
+      @media only screen and (device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
+        /* Your styles for iPhone 12 Pro go here */
+        .navbar {
+          max-height: 3.5rem;
+        }
+      }
     </style>
 </head>
 <body>
