--- a/promptbook/templates/list_categories.html
+++ b/promptbook/templates/list_categories.html
@@ -88,6 +88,13 @@
     .preview-section {
       min-height: 5rem;
     }
+
+    @media only screen and (device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) {
+      /* Your styles for iPhone 12 Pro go here */
+      .modal-card {
+        width: 85%;
+      }
+    }
   </style>
   <div class="container">
     <h1 class="title">Categories</h1>
