--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -3,6 +3,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0W0PW9PMC5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-0W0PW9PMC5');
+    </script>
     <meta charset="utf-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Vidura Cloud - Bake your ChatGPT prompts">
