feat: install correct gtag

--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -3,14 +3,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0W0PW9PMC5"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BG0VL8M14C"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-0W0PW9PMC5');
+      gtag('config', 'G-BG0VL8M14C');
     </script>
     <meta charset="utf-8" lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1">
