feat: change title based on page

--- a/promptbook/templates/activity_stream.html
+++ b/promptbook/templates/activity_stream.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}activity stream{% endblock title %}
 
 {% block content %}
   <h1 class="title">Activity Stream</h1>
