--- a/promptbook/templates/base.html
+++ b/promptbook/templates/base.html
@@ -23,7 +23,7 @@
     
     <meta property="og:image" content="https://i.ibb.co/7Vyt7Kw/vidura-logo-grn.png">
     <meta name="twitter:image" content="https://i.ibb.co/7Vyt7Kw/vidura-logo-grn.png">
-    <title>Vidura Cloud</title>
+    <title>Vidura {% block title %}{% endblock %}</title>
     <link rel="icon" type="image/x-icon" href="https://i.ibb.co/7Vyt7Kw/vidura-logo-grn.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
