--- a/promptbook/templates/list_prompts_by_label.html
+++ b/promptbook/templates/list_prompts_by_label.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}prompts by label{% endblock title %}
 
 {% block content %}
   <h1 class="title">Prompts with label: {{ label.name }}</h1>
