--- a/promptbook/templates/login.html
+++ b/promptbook/templates/login.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% load socialaccount %}
+
+{% block title %}login{% endblock title %}
 {% block content %}
 <section>
   <style>
