--- a/promptbook/templates/search_results.html
+++ b/promptbook/templates/search_results.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}search{% endblock title %}
 
 {% block content %}
   <h1 class="title">Search results for: "{{ query }}"</h1>
