--- a/promptbook/templates/upload_avatar.html
+++ b/promptbook/templates/upload_avatar.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}upload avatar{% endblock title %}
 
 {% block content %}
   <h1 class="title">Upload Avatar</h1>
