--- a/promptbook/templates/list_prompts.html
+++ b/promptbook/templates/list_prompts.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% block title %}prompts{% endblock title %}
 
 {% block content %}
@@ -87,14 +88,14 @@
 
   </style>
   <a href="{% url 'list_categories' %}" class="back-button">
-    <i class="fas fa-arrow-left"></i> Back to Categories
+    <i class="fas fa-arrow-left"></i> {% trans "Back to Categories" %}
   </a>
-  <h1 class="title">Prompts in category: {{ category.name }}</h1>
+  <h1 class="title">{% trans "Prompts in category" %}: {{ category.name }}</h1>
   {% if prompts %}
   <a href="{% url 'editor' %}?category_id={{ category.id }}" class="add-prompt-btn">
     <button class="button">
       <span class="icon"><i class="fas fa-plus"></i></span>
-      <span>Add prompt</span>
+      <span>{% trans "Add prompt" %}</span>
     </button>
   </a>
   {% endif %}
@@ -112,7 +113,7 @@
               <div class="columns">
                 <div class="column is-6">
                   <button class="button edit-prompt-btn" onclick="openEditPrompt({{ prompt.id }})">
-                    Edit
+                    {% trans "Edit" %}
                   </button>
                 </div>
                 <div class="column is-6 is-pulled-right">
@@ -136,7 +137,7 @@
             </div>
           </div>
           <div class="row">
-            <p class="last-updated">Last updated: {{ prompt.modified_at }}</p>
+            <p class="last-updated">{% trans "Last updated:" %} {{ prompt.modified_at }}</p>
           </div>
           <button class="copy-button button is-small" data-clipboard-text="{{ prompt.text }}">
             <span class="icon">
@@ -169,12 +170,12 @@
         <div class="column is-full">
           <div class="box has-text-centered" style="height: 200px; display: flex; align-items: center; justify-content: center;">
             <div class='rows'>
-            <h3 class="subtitle">No prompts. Here's a cookie <svg style="height: 20px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M247.2 17c-22.1-3.1-44.6 .9-64.4 11.4l-74 39.5C89.1 78.4 73.2 94.9 63.4 115L26.7 190.6c-9.8 20.1-13 42.9-9.1 64.9l14.5 82.8c3.9 22.1 14.6 42.3 30.7 57.9l60.3 58.4c16.1 15.6 36.6 25.6 58.7 28.7l83 11.7c22.1 3.1 44.6-.9 64.4-11.4l74-39.5c19.7-10.5 35.6-27 45.4-47.2l36.7-75.5c9.8-20.1 13-42.9 9.1-64.9l-14.6-82.8c-3.9-22.1-14.6-42.3-30.7-57.9L388.9 57.5c-16.1-15.6-36.6-25.6-58.7-28.7L247.2 17zM208 144a32 32 0 1 1 0 64 32 32 0 1 1 0-64zM144 336a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm224-64a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"/></svg></h3>
+            <h3 class="subtitle">{% trans "No prompts. Here's a cookie" %} <svg style="height: 20px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M247.2 17c-22.1-3.1-44.6 .9-64.4 11.4l-74 39.5C89.1 78.4 73.2 94.9 63.4 115L26.7 190.6c-9.8 20.1-13 42.9-9.1 64.9l14.5 82.8c3.9 22.1 14.6 42.3 30.7 57.9l60.3 58.4c16.1 15.6 36.6 25.6 58.7 28.7l83 11.7c22.1 3.1 44.6-.9 64.4-11.4l74-39.5c19.7-10.5 35.6-27 45.4-47.2l36.7-75.5c9.8-20.1 13-42.9 9.1-64.9l-14.6-82.8c-3.9-22.1-14.6-42.3-30.7-57.9L388.9 57.5c-16.1-15.6-36.6-25.6-58.7-28.7L247.2 17zM208 144a32 32 0 1 1 0 64 32 32 0 1 1 0-64zM144 336a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm224-64a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"/></svg></h3>
             
               <a href="{% url 'editor' %}?category_id={{ category.id }}" class="add-prompt-btn">
                 <button class="button">
                   <span class="icon"><i class="fas fa-plus"></i></span>
-                  <span>Add prompt</span>
+                  <span>{% trans "Add prompt" %}</span>
                 </button>
               </a>
           </div>
@@ -341,9 +342,9 @@
         }, function(data) {
           if (data.success) {
             if (isPublic) {
-              that.parent().siblings(".toggle-text").text("Click to make private");
+              that.parent().siblings(".toggle-text").text("{% trans 'Click to make private' %}");
             } else {
-              that.parent().siblings(".toggle-text").text("Click to make public");
+              that.parent().siblings(".toggle-text").text("{% trans 'Click to make public' %}");
             }
             console.log('Toggle updated successfully');
           } else {
