--- a/promptbook/templates/list_prompts_by_label.html
+++ b/promptbook/templates/list_prompts_by_label.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% block title %}prompts by label{% endblock title %}
 
 {% block content %}
@@ -8,7 +9,7 @@
       <div class="column is-one-third">
         <div class="box">
           <div class="content">
-            <p>{{ prompt.text|truncatechars:250 }} <span class="tag is-light">Length: {{ prompt.text|length }} chars...</span></p>
+            <p>{{ prompt.text|truncatechars:250 }} <span class="tag is-light">{% trans "Length:" %} {{ prompt.text|length }} {% trans "chars..." %}</span></p>
           </div>
           <button class="button is-small" data-clipboard-text="{{ prompt.text }}">
             <span class="icon">
