--- a/promptbook/templates/login.html
+++ b/promptbook/templates/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% load socialaccount %}
 
 {% block title %}login{% endblock title %}
@@ -23,7 +24,7 @@
             <form class="box">
                 {% csrf_token %}
                 <div class="field">
-                <label for="" class="label">Username</label>
+                <label for="" class="label">{% trans "Username" %}</label>
                 <div class="control has-icons-left">
                     <input type="text" placeholder="e.g. bobsmith" class="input" id="username" required>
                     <span class="icon is-small is-left">
@@ -32,7 +33,7 @@
                 </div>
                 </div>
                 <div class="field">
-                <label for="" class="label">Password</label>
+                <label for="" class="label">{% trans "Password" %}</label>
                 <div class="control has-icons-left">
                     <input type="password" placeholder="*******" class="input" id="password" required>
                     <span class="icon is-small is-left">
@@ -43,12 +44,12 @@
                 <div class="field">
                 <label for="" class="checkbox">
                     <input type="checkbox">
-                    Remember me
+                    {% trans "Remember me" %}
                 </label>
                 </div>
                 <div class="field">
                 <button class="button is-success" id="login-button">
-                    Login
+                    {% trans "Login" %}
                 </button>
                 </div>
             </form>
@@ -56,8 +57,8 @@
               <span class="icon">
                   <i class="fab fa-google"></i>
               </span>
-              <span>Sign in with Google</span>
-            </a> <p>(No signup required <i class="fas fa-thumbs-up"></i>)</p>
+              <span>{% trans "Sign in with Google" %}</span>
+            </a> <p>({% trans "No signup required" %} <i class="fas fa-thumbs-up"></i>)</p>
             <!-- <a href="{% provider_login_url 'google' %}" class="btn btn-danger">
               <i class="fab fa-google"></i> Sign in with Google
             </a> -->
