--- a/promptbook/templates/upload_avatar.html
+++ b/promptbook/templates/upload_avatar.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
+{% load i18n %}
 {% block title %}upload avatar{% endblock title %}
 
 {% block content %}
-  <h1 class="title">Upload Avatar</h1>
+  <h1 class="title">{% trans "Upload Avatar" %}</h1>
   <div class="box">
     <form method="POST" enctype="multipart/form-data">
       {% csrf_token %}
@@ -15,14 +16,14 @@
                 <i class="fas fa-upload"></i>
               </span>
               <span class="file-label">
-                Choose an avatar...
+                {% trans "Choose an avatar..." %}
               </span>
             </span>
           </label>
         </div>
       </div>
       <br>
-      <button class="button" type="submit">Upload</button>
+      <button class="button" type="submit">{% trans "Upload" %}</button>
     </form>
   </div>
 {% endblock %}
